--- a/frontend/atomaro/package.json
+++ b/frontend/atomaro/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@typescript-eslint/utils": "^8.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "path": "^0.12.7",
@@ -22,7 +25,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.11.1",
     "@storybook/addon-essentials": "^8.3.3",
     "@storybook/addon-interactions": "^8.3.3",
     "@storybook/addon-links": "^8.3.3",
@@ -31,12 +34,13 @@
     "@storybook/react": "^8.3.3",
     "@storybook/react-vite": "^8.3.3",
     "@storybook/test": "^8.3.3",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
+    "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-storybook": "^0.8.0",
@@ -44,8 +48,8 @@
     "postcss": "^8.4.47",
     "storybook": "^8.3.3",
     "tailwindcss": "^3.4.12",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.7.0",
     "vite": "^5.4.1"
   },
   "eslintConfig": {
