--- a/frontend/atomaro/package.json
+++ b/frontend/atomaro/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@atomaro/icons": "^1.0.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
@@ -21,6 +22,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
