--- a/frontend/atomaro/package.json
+++ b/frontend/atomaro/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@atomaro/icons": "^1.0.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
